Update note College/Sem IV/EVS/GCS Case Study/GCS 2001.md

--- a/src/site/notes/College/Sem IV/EVS/GCS Case Study/GCS 2001.md
+++ b/src/site/notes/College/Sem IV/EVS/GCS Case Study/GCS 2001.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/college/sem-iv/evs/gcs-case-study/gcs-2001/","tags":["favorite"]}
+{"dg-publish":true,"permalink":"/college/sem-iv/evs/gcs-case-study/gcs-2001/"}
 ---
 
 
